fix overflow on chrome

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw !important;
+    width: 100% !important;
     height: 100vh !important;
     filter: drop-shadow(0px 10px white);
 }
@@ -107,7 +107,7 @@ canvas {
     position: absolute;
     /* let height be a bit higher than the spacer, to ensure no gap */
     height: calc(100vh + 190px);
-    width: 100vw;
+    width: 100%;
     z-index: -3;
     background: linear-gradient(180deg, rgb(5, 130, 233) 00%, rgb(0, 114, 208) 80%, rgb(11, 0, 89) 96%);
 }
